# Nas-backup-buddy

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  THIRD_PARTY_NOTICES.md
apps/agent/: README.md
apps/client/: AUDIT.md  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/client/crates/nasbb-core/: Cargo.toml
apps/client/crates/nasbb-core/src/: commands.rs  config.rs  health.rs  host_setup.rs  integration.rs  kopia.rs  lib.rs  overlay.rs  peer_bundle.rs  redaction.rs  remote_target.rs  safety.rs  sftp_verify.rs  syncthing.rs  test_lab.rs  tools.rs
apps/client/src/: App.tsx  index.css
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/resources/: tool-manifest.json
apps/client/src-tauri/src/: lib.rs  main.rs
apps/client/src/context/: AppContext.tsx
apps/client/src/lib/: host-agent-api.ts  host-agent-types.ts  mock-state.ts  persistence.ts  tauri-bridge.ts  types.ts
apps/client/src/views/: About.tsx  BackupPlan.tsx  Dashboard.tsx  HealthChecks.tsx  Host.tsx  HostSetup.tsx  Logs.tsx  OverlaySetup.tsx  Peer.tsx  PeerConnection.tsx  PeerStorage.tsx  RecoveryKey.tsx  RestoreDrill.tsx  Settings.tsx  SetupWizard.tsx  SyncthingConnection.tsx  TestLab.tsx
apps/client/src/views/host/: AllocationsPanel.tsx  DiagnosticsPanel.tsx  HostStackPanel.tsx  SettingsPanel.tsx  TailscalePanel.tsx
apps/host-agent/: Makefile  go.mod  go.sum
apps/host-agent/compose/: .env.example  docker-compose.yml
apps/host-agent/docker/agent/: Dockerfile  entrypoint.sh
apps/host-agent/docker/sftp/: Dockerfile  entrypoint.sh  reload-watcher.sh  sshd_config
apps/host-agent/src/: main.go
apps/host-agent/src/allocation/: lifecycle.go  manager.go  model.go
apps/host-agent/src/api/: handlers.go  middleware.go  peer_server.go  server.go
apps/host-agent/src/bundle/: invite.go  response.go
apps/host-agent/src/config/: config.go
apps/host-agent/src/events/: log.go
apps/host-agent/src/health/: health.go
apps/host-agent/src/overlay/: tailscale.go
apps/host-agent/src/sftp/: keys.go  manager.go  quota.go
apps/host-agent/tests/integration/: api_test.go
apps/host-agent/tests/scripts/: verify.sh
apps/web/: README.md  eslint.config.js  index.html  package-lock.json  package.json
apps/web/src/: App.tsx  index.css
apps/web/src/components/: HealthCheckRow.tsx  Layout.tsx  ScoreBar.tsx  Sidebar.tsx  StatusPill.tsx
apps/web/src/context/: AppContext.tsx
apps/web/src/data/: mockData.ts
apps/web/src/types/: index.ts
apps/web/src/views/: Admin.tsx  BackupPact.tsx  Dashboard.tsx  HealthChecks.tsx  Help.tsx  Incidents.tsx  MatchDetail.tsx  MatchFinder.tsx  Profile.tsx  RestoreDrill.tsx
docs/: README.md  architecture.md  control-and-audit-plan.md  feasibility-study.md  implementation-map.md  risk-register.md
docs/adr/: 0001-use-backup-engine-plus-syncthing.md  0002-start-with-barter-before-paid-marketplace.md  0003-docker-host-agent-architecture.md
docs/audits/: client-tab-audit-2026-05-05.md  host-peer-audit-2026-04-30.md  host-tab-audit-2026-05-02.md  peer-tab-audit-2026-05-02.md
docs/client-app/: README.md  architecture.md  configuration.md  current-audit.md  implementation-map.md  packaging-and-release.md  security-and-safety.md
docs/host-agent/: agent-implementation-plan.md  api-contract.md  docker-host-agent-implementation.md  runbook.md
docs/prompts/: implement-client-app.md  implement-host-tab.md  implement-network-overlay-corrections.md  implement-peer-connection-redesign.md  implement-peer-tab.md  project-next-steps.md
docs/research/: source-links.md
docs/runbooks/: client-local-kopia-syncthing-test.md  proof-of-concept.md  restore-drill.md  two-machine-sftp-overlay-trial.md
docs/templates/: backup-pact.md
infra/syncthing/: README.md
scripts/: README.md
