[package]
name = "nasbb-client"
version = "0.1.0"
edition = "2021"
description = "NAS Backup Buddy desktop client"
license = "AGPL-3.0-only"

[lib]
name = "nasbb_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nasbb-core = { path = "../crates/nasbb-core" }
