[package]
name = "nasbb-client"
version = "0.1.0"
edition = "2021"
description = "NAS Backup Buddy desktop client"
license = "AGPL-3.0-only"

[lib]
name = "nasbb_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nasbb-core = { path = "../crates/nasbb-core" }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
# Lightweight HTTP client for Syncthing REST API calls (localhost only)
ureq = { version = "2", features = ["json"] }
# Cross-platform OS keychain: macOS Keychain, Windows Credential Manager, Linux Secret Service
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
