[package]
name = "nasbb-core"
version = "0.1.0"
edition = "2021"
description = "Pure Rust core logic for NAS Backup Buddy — config, health, safety, redaction, tools"
license = "AGPL-3.0-only"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
