[package]
name = "nasbb-core"
version = "0.1.0"
edition = "2021"
description = "Pure Rust core logic for NAS Backup Buddy — config, health, safety, redaction, tools"
license = "AGPL-3.0-only"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
toml = "0.8"
tempfile = "3"
# Native SSH/SFTP — eliminates external sftp binary dependency.
# Links against libssh2 (available on macOS via system OpenSSH / Homebrew;
# on Linux install libssh2-dev; on Windows via OpenSSH optional feature or Git).
ssh2 = "0.9"
# Base64 encoding for SHA-256 host-key fingerprints (OpenSSH standard format).
base64 = "0.22"

# On Windows, vendor OpenSSL so the binary does not require external DLLs.
# The ssh2 crate's libssh2-sys dep links against openssl-sys; vendoring compiles
# OpenSSL from source using MSVC/MinGW (no separate OpenSSL installation needed).
[target.'cfg(target_os = "windows")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
