[package]
name = "nasbb-core"
version = "0.1.0"
edition = "2021"
description = "Pure Rust core logic for NAS Backup Buddy — config, health, safety, redaction, tools"
license = "AGPL-3.0-only"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
toml = "0.8"
tempfile = "3"
# Native SSH/SFTP — eliminates external sftp binary dependency.
# Crypto backend: OpenSSL on macOS/Linux; WinCNG (built into Windows) on Windows.
# Linux build: install libssh2-dev (apt) or libssh2-devel (yum).
# macOS build: libssh2 available via Homebrew or system OpenSSH.
# Windows build: uses WinCNG — no OpenSSL or Perl required.
ssh2 = "0.9"
# Base64 encoding for SHA-256 host-key fingerprints (OpenSSH standard format).
base64 = "0.22"

[dev-dependencies]
